tests/output/self_hosted/bad_expression_error.txt
tests/bad_expression_error.oomph:2: error: should be an expression

    print(case)
          ^^^^

assert() failed in "self_hosted/error.oomph", line N
